# Cmake

demo1_初试CMAKE/: CMakeLists.txt  main.cpp
demo2_包含库/: CMakeLists.txt  main.cpp  main.h  test.cpp
demo3_加文件夹/: CMakeLists.txt
demo3_加文件夹/src/: main  main.cpp
demo4_加out文件夹/: test.cpp
demo4_加out文件夹/src/: main.cpp
demo5_创建静态库/: CMakeLists.txt
demo5_创建静态库/src/: main.cpp
demo6_添加私有编译_宏定义/: CMakeLists.txt
demo6_添加私有编译_宏定义/src/: main.cpp
demo7_添加子目录/: CMakeLists.txt
demo7_添加子目录/main/: CMakeLists.txt  main.cpp
demo7_添加子目录/test/: CMakeLists.txt  test.cpp
demo8_修改目录结构输出位置/src/Main/: CMakeLists.txt  main.cpp
demo9/: CMakeLists.txt
demo9/include/: test.h
demo9/src/Main/: main.cpp
demo9/src/Test/: test.cpp
